syntax = "proto3";
package auth;

import "user.proto";

message SignInUserInput {
    string phone = 1;
    string password = 2;
}

message SignInUserResponse {
    string access_token = 1;
    string refresh_token = 2;
    User user = 3;
}
